--- a/sass/_adaptive.sass
+++ b/sass/_adaptive.sass
@@ -10,3 +10,9 @@
         right: 0
         left: 50%
         transform: translateX(-50%)
+    .header
+        padding-top: 30px
+    .header-title
+        font-size: 100px
+    .header-subtitle
+        font-size: 35px
