--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -8,7 +8,8 @@
   text-align: center
   padding-top: 50px
   &-title
-    font-size: 60px
+    font-family: 'DS Arabic', arial
+    font-size: 150px
     color: #E55F35
   &-subtitle
     font-size: 50px
