--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,7 +1,10 @@
 body
   font-family: 'Open Sans', sans-serif
   margin: 0 0
-  
+
+h1
+  margin: 0
+
 @import '_header'
 @import '_contacts'
 @import '_products'
